# ash-nazg

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  run-report.json
.github/workflows/: build-engine-dosbox.yml  build-host.yml  nextcloud-integration.yml  test.yml  (+3 more)
.habitat/: audit.jsonl  run-output-builder-apply-docs-contract-20260713-072841.md  run-output-reviewer-apply-docs-contract-20260713-073136.md  run-report-builder-apply-docs-contract-20260713-072841.html  run-report-reviewer-apply-docs-contract-20260713-073136.html
appinfo/: info.xml
docs/: bring-your-own-content.md  demo.md  index.md  installation.md  security-model.md  testing.md  user-guide.md
frontend/: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
host/: .dockerignore  Dockerfile  pyproject.toml
host/src/ash_nazg/: __init__.py  admin_settings.py  appapi.py  appapi_client.py  detection.py  dispatch.py  files_action.py  initial_state.py  io_adapters.py  main.py  request_context.py  selftest.py  spawners.py
host/src/ash_nazg/engines/: __init__.py  dosbox_x.py  registry.py
host/tests/: test_detection.py  test_dispatch.py  test_dosbox_x.py  test_files_action.py  test_health.py  test_registry.py  test_request_context.py  test_run_endpoint.py  test_spawners.py
l10n/: en.json  nl.json
openspec/: config.yaml
scripts/: bootstrap-nextcloud.sh  diagnose-proxy-auth.sh  local-nextcloud-stack.yml  verify-against-nextcloud.sh  verify-info-xml.sh
(+42 files in other folders)
